# lupartition

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
methods/: naive.py  utils.py
src/lupartition/: __init__.py  iset.py  llmap.py  main.py  naive.py  utils.py
src/lupartition/methods/: __init__.py  fft.py  frozendict.py  iset.py  naive.py  utils.py
tests/: benchmarks.py  conftest.py  test_comparison.py  test_graphs.py  test_iset.py  test_naive.py  utils.py
