[metadata]
name = lupartition
version = 0.0.1
# TODO: update author and author_email
author = Example Author
author_email = author@example.com
description = (l, u) partitions of networkx graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eladrinwizard1/lupartition
project_urls =
    Bug Tracker = https://github.com/eladrinwizard1/lupartition/issues
# TODO: edit license
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
